kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-flask-app
  labels:
    app: k8s-flask-app
spec:
  replicas: 8
  selector:
    matchLabels:
      app: k8s-flask-app
  template:
    metadata:
      labels:
        app: k8s-flask-app
    spec:
      containers:
        - name: k8s-flask-app
          image: biancarosa/k8s-flask-app
