kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-flask-app
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: k8s-flask-app
  type: NodePort
