kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-flask-app
spec:
  backend:
    serviceName: k8s-flask-app
    servicePort: 5000
